--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_riverpod: ^1.0.4
   flutter_chat_types: ^3.4.5
   uuid: ^3.0.6
+  flutter_svg: ^1.1.4
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
