--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>アプリはアイコンなどで使用するために写真を使用します。</string>
+	<key>NSCameraUsageDescription</key>
+	<string>アプリはアイコンなどで使用するためにカメラを使用します。</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>使わないと思う</string>
 </dict>
 </plist>
