--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   uuid: ^3.0.6
   flutter_svg: ^1.1.4
   image_picker: ^0.8.5+3
+  provider: ^6.0.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
